Style tweaks to prevent text overlapping image

--- a/site/pages/our-work/case-study-retailer-slice/style.css
+++ b/site/pages/our-work/case-study-retailer-slice/style.css
@@ -1,5 +1,5 @@
 @value badgerBlack, badgerWhite, badgerRed, linesOnWhite from "../../../css/_colors.css";
-@value mediumScreen from "../../../css/_sizes.css";
+@value mediumScreen, largeScreen from "../../../css/_sizes.css";
 
 .caseStudyContainer {
   max-width: 1100px;
@@ -60,6 +60,7 @@ _:-ms-fullscreen, :root .imageLink {
   composes: fontS from "../../../css/typography/_fonts.css";
   composes: lightSerif from "../../../css/typography/_fonts.css";
   color: badgerBlack;
+  font-size: 20px;
 }
 
 .caseStudyTextContainer {
@@ -117,6 +118,16 @@ _:-ms-fullscreen, :root .imageLink {
     min-width: 400px;
   }
 
+  .orders {
+    right: 10px;
+    top: 10px;
+  }
+
+  .visits {
+    left: 10px;
+    bottom: 10px;
+  }
+
   .caseStudyTextContainerHeader {
     margin-top: 20px;
   }
@@ -136,4 +147,16 @@ _:-ms-fullscreen, :root .imageLink {
     padding-bottom: 0;
   }
 
+}
+
+@media largeScreen {
+  .orders {
+    right: 30px;
+    top: 30px;
+  }
+
+  .visits {
+    left: 30px;
+    bottom: 30px;
+  }
 }
